resources/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.k3s.8n1.sh
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
